--- a/gb/19/11/4/n11632467.md
+++ b/gb/19/11/4/n11632467.md
@@ -1,63 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Á½Ç§¶àÈË²Î¹ÛÂíµÂÀï¡°ÕæÉÆÈÌÃÀÕ¹¡±ÉîÊÜ¸Ð¶¯</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_03-600x400.jpg" />
-<h6>¹ÛÖÚ¹ÛÉÍ¡°ÕæÉÆÈÌ¹ú¼ÊÃÀÕ¹µÄ»­×÷¡±¡££¨Ã÷»ÛÍø£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/mytgei3586/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¸¤åƒå¤šäººå‚è§‚é©¬å¾·é‡Œâ€œçœŸå–„å¿ç¾Žå±•â€æ·±å—æ„ŸåŠ¨</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_03-600x400.jpg" />
+<h6>è§‚ä¼—è§‚èµâ€œçœŸå–„å¿å›½é™…ç¾Žå±•çš„ç”»ä½œâ€ã€‚ï¼ˆæ˜Žæ…§ç½‘ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê11ÔÂ04ÈÕÑ¶¡¿10ÔÂ2ÈÕÖÁ30ÈÕ£¬¡°ÕæÉÆÈÌ¹ú¼ÊÃÀÕ¹¡±ÔÚ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E8%A5%BF%E7%8F%AD%E7%89%99.md">Î÷°àÑÀ</a>ÂíµÂÀïÂåÅå©qµÂ©qÎ¬¼ÓÎÄ»¯ÖÐÐÄ¾ÙÐÐ¡£Á½Ç§¶àÃû²Î¹ÛÕßÐÀÉÍÁËÕ¹³öµÄ»­×÷£¬Ðí¶àÈË±»ÕâÐ©ÒÕÊõ×÷Æ·ÉîÉî´ò¶¯¡£</p>
-<p>Ã÷»ÛÍø±¨µ¼£¬Õâ½ìÃÀÕ¹Õ¹³öÁË³¬¹ý12Î»ÒÕÊõ¼ÒµÄÓÍ»­ºÍË®²Ê»­×÷Æ·¡£ÕâÐ©ÒÕÊõ¼Ò¶¼ÊÇ·¨ÂÖ¹¦£¨Ò²³Æ·¨ÂÖ´ó·¨£©ÐÞÁ¶Õß¡£ËûÃÇÓÃ»­±ÊÕ¹ÏÖÁË·¨ÂÖ´ó·¨ÐÞÁ¶µÄÃÀºÃºÍ·¢ÉúÔÚÖÐ¹úµÄÕë¶Ô¼áÊØÐÅÑöµÄ·¨ÂÖ´ó·¨ÐÞÁ¶ÕßµÄÈËÈ¨ÆÈº¦¡£</p>
-<p>×Ô1999ÄêÒÔÀ´£¬ÖÐ¹²¶Ô·¨ÂÖ¹¦µÄÆÈº¦³ÖÐøÖÁ½ñ¡£Ðí¶àÉÆÁ¼µÄÃñÖÚ±í´ïÁËËûÃÇ¶Ô·¨ÂÖ¹¦µÄÖ§³Ö£¬²¢Ï£Íû¾¡¿ì½áÊøÆÈº¦¡£</p>
-<figure id="attachment_11632493" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_01.jpg"><img class="size-large wp-image-11632493" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_01-600x341.jpg" alt="" width="600" b="341" /></a><figcaption class="wp-caption-text">¹ÛÖÚ¹Û¿´¡°<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E7%9C%9F%E5%96%84%E5%BF%8D%E7%BE%8E%E5%B1%95.md">ÕæÉÆÈÌÃÀÕ¹</a>¡±µÄ»­×÷¡££¨Ã÷»ÛÍø£©</figcaption></figure>
-<figure id="attachment_11632494" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_02.jpg"><img class="wp-image-11632494 size-large" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_02-600x431.jpg" alt="" width="600" b="431" /></a><figcaption class="wp-caption-text">¹ÛÖÚ¹Û¿´¡°<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E7%9C%9F%E5%96%84%E5%BF%8D%E7%BE%8E%E5%B1%95.md">ÕæÉÆÈÌÃÀÕ¹</a>¡±µÄ»­×÷¡££¨Ã÷»ÛÍø£©</figcaption></figure>
-<figure id="attachment_11632495" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_04.jpg"><img class="wp-image-11632495 size-large" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_04-600x263.jpg" alt="" width="600" b="263" /></a><figcaption class="wp-caption-text">¹ÛÖÚ¹Û¿´¡°ÕæÉÆÈÌÃÀÕ¹¡±µÄ»­×÷¡££¨Ã÷»ÛÍø£©</figcaption></figure>
-<p>ÂíµÂÀïÒ»ËùÑ§Ð£µÄÀÏÊ¦ºÍÑ§Éú¹Û¿´ÁËÃÀÕ¹µÄ»­×÷£¬ÔÚ×ÐÏ¸ÐÀÉÍÁËÃ¿·ù»­×÷Ö®ºó£¬·¨ÂÖ¹¦Ñ§Ô±ÏòËûÃÇ½éÉÜÁË·¨ÂÖ´ó·¨µÄÐÞÁ¶£¬ÒÔ¼°Õâ¸ö¹¦·¨ÔÚÖÐ¹úÔâµ½µÄÆÈº¦¡£</p>
-<figure id="attachment_11632515" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_05.jpg"><img class="size-large wp-image-11632515" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_05-600x343.jpg" alt="" width="600" b="343" /></a><figcaption class="wp-caption-text">Ò»ËùÑ§Ð£µÄÊ¦ÉúÐÀÉÍÁË»­×÷²¢ÈÏÕæñöÌýÁË½éÉÜ¡££¨Ã÷»ÛÍø£©</figcaption></figure>
-<p>·¨ÂÖ¹¦ÓÚ1992ÄêÔÚÖÐ¹ú´óÂ½´«³ö£¬Ö¸µ¼ÈËÃÇ°´ÕÕ¡°Õæ¡¢ÉÆ¡¢ÈÌ¡±Ô­ÔòÒªÇó×Ô¼º£¬Ìá¸ßÈËÃÇµÄÉíÌåËØÖÊºÍ¾«Éñ¾³½ç£¬ÖÁ½ñºé´«µ½ÊÀ½çÒ»°Ù¶à¸ö¹ú¼ÒºÍµØÇø£¬ÉîÊÜ¸÷×åÒáÃñÖÚµÄ»¶Ó­¡£</p>
-<p>È»¶ø1999Äê7ÔÂÒÔÖÐ¹²Ç°µ³¿ý½­ÔóÃñÎªÊ×µÄÐ°¶ñ¼¯ÍÅ¶Ô·¨ÂÖ¹¦·¢¶¯ÁËÃð¾øÈËÐÔµÄÆÈº¦£¬¸ø·¨ÂÖ¹¦Ñ§Ô±¼°Æä¼ÒÊô´øÀ´ÉîÖØµÄÔÖÄÑ¡£</p>
-<p>Ðí¶àÈËÔÚÁôÑÔ²¾ÖÐÐ´ÏÂÁËËûÃÇµÄ¸ÐÊÜ£º</p>
-<p>ÂêÀöÑÇ©qºÎÈü£¨Maria Jos¨¦£©Ð´µÀ£º¡°ÎÒÏ£ÍûºÜ¿ìÈËÃÇ¶¼ÄÜÁË½âÕâ³¡ÆÈº¦£¬ÒÔ±ãÕâÑùµÄÆÈº¦²»ÔÙ·¢Éú¡£¡±</p>
-<p>°¢ÂêÀöÑÇ©qÉ¯¿ËµÙ£¨Amalia Shakti£©Ð´µÀ£º¡°½Ü³öµÄ»­Õ¹´ò¶¯ÈËÐÄ£¬ÓëÕæÕýÖØÒªµÄÖ÷ÌâÁªÏµÔÚÒ»Æð£¬±íÏÖÈËÐÔÉý»ªºóµÄ³ç¸ß¡£Ò»´ÎÃÀºÃ¶øÕðº³µÄ¾­Àú¡£¡±</p>
-<p>ÁíÒ»Î»ÉîÓÐ¸Ð´¥µÄ¹ÛÉÍÕßÔÚÁôÑÔ²¾ÉÏÐ´µÀ£º¡°Õâ´ÎÕ¹ÀÀÊÇÇé¸ÐµÄÉý»ª£¬´«µÝÁËºÍÆ½ÓëÐ³ºÍ¡£¡±#</p>
-<p>ÎÄ×ÖÕûÀí£ºÀî½àË¼£¬ÔðÈÎ±à¼­£º¸ß¾²</p>
-
+	<p>ã€å¤§çºªå…ƒ2019å¹´11æœˆ04æ—¥è®¯ã€‘10æœˆ2æ—¥è‡³30æ—¥ï¼Œâ€œçœŸå–„å¿å›½é™…ç¾Žå±•â€åœ¨<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E8%A5%BF%E7%8F%AD%E7%89%99.md#1">è¥¿ç­ç‰™</a>é©¬å¾·é‡Œæ´›ä½©ï¹’å¾·ï¹’ç»´åŠ æ–‡åŒ–ä¸­å¿ƒä¸¾è¡Œã€‚ä¸¤åƒå¤šåå‚è§‚è€…æ¬£èµäº†å±•å‡ºçš„ç”»ä½œï¼Œè®¸å¤šäººè¢«è¿™äº›è‰ºæœ¯ä½œå“æ·±æ·±æ‰“åŠ¨ã€‚</p>
+<p>æ˜Žæ…§ç½‘æŠ¥å¯¼ï¼Œè¿™å±Šç¾Žå±•å±•å‡ºäº†è¶…è¿‡12ä½è‰ºæœ¯å®¶çš„æ²¹ç”»å’Œæ°´å½©ç”»ä½œå“ã€‚è¿™äº›è‰ºæœ¯å®¶éƒ½æ˜¯æ³•è½®åŠŸï¼ˆä¹Ÿç§°æ³•è½®å¤§æ³•ï¼‰ä¿®ç‚¼è€…ã€‚ä»–ä»¬ç”¨ç”»ç¬”å±•çŽ°äº†æ³•è½®å¤§æ³•ä¿®ç‚¼çš„ç¾Žå¥½å’Œå‘ç”Ÿåœ¨ä¸­å›½çš„é’ˆå¯¹åšå®ˆä¿¡ä»°çš„æ³•è½®å¤§æ³•ä¿®ç‚¼è€…çš„äººæƒè¿«å®³ã€‚</p>
+<p>è‡ª1999å¹´ä»¥æ¥ï¼Œä¸­å…±å¯¹æ³•è½®åŠŸçš„è¿«å®³æŒç»­è‡³ä»Šã€‚è®¸å¤šå–„è‰¯çš„æ°‘ä¼—è¡¨è¾¾äº†ä»–ä»¬å¯¹æ³•è½®åŠŸçš„æ”¯æŒï¼Œå¹¶å¸Œæœ›å°½å¿«ç»“æŸè¿«å®³ã€‚</p>
+<figure id="attachment_11632493" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_01.jpg"><img class="size-large wp-image-11632493" src="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_01-600x341.jpg" alt="" width="600" b="341" /></a><figcaption class="wp-caption-text">è§‚ä¼—è§‚çœ‹â€œ<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E7%9C%9F%E5%96%84%E5%BF%8D%E7%BE%8E%E5%B1%95.md#1">çœŸå–„å¿ç¾Žå±•</a>â€çš„ç”»ä½œã€‚ï¼ˆæ˜Žæ…§ç½‘ï¼‰</figcaption></figure>
+<figure id="attachment_11632494" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_02.jpg"><img class="wp-image-11632494 size-large" src="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_02-600x431.jpg" alt="" width="600" b="431" /></a><figcaption class="wp-caption-text">è§‚ä¼—è§‚çœ‹â€œ<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E7%9C%9F%E5%96%84%E5%BF%8D%E7%BE%8E%E5%B1%95.md#1">çœŸå–„å¿ç¾Žå±•</a>â€çš„ç”»ä½œã€‚ï¼ˆæ˜Žæ…§ç½‘ï¼‰</figcaption></figure>
+<figure id="attachment_11632495" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_04.jpg"><img class="wp-image-11632495 size-large" src="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_04-600x263.jpg" alt="" width="600" b="263" /></a><figcaption class="wp-caption-text">è§‚ä¼—è§‚çœ‹â€œçœŸå–„å¿ç¾Žå±•â€çš„ç”»ä½œã€‚ï¼ˆæ˜Žæ…§ç½‘ï¼‰</figcaption></figure>
+<p>é©¬å¾·é‡Œä¸€æ‰€å­¦æ ¡çš„è€å¸ˆå’Œå­¦ç”Ÿè§‚çœ‹äº†ç¾Žå±•çš„ç”»ä½œï¼Œåœ¨ä»”ç»†æ¬£èµäº†æ¯å¹…ç”»ä½œä¹‹åŽï¼Œæ³•è½®åŠŸå­¦å‘˜å‘ä»–ä»¬ä»‹ç»äº†æ³•è½®å¤§æ³•çš„ä¿®ç‚¼ï¼Œä»¥åŠè¿™ä¸ªåŠŸæ³•åœ¨ä¸­å›½é­åˆ°çš„è¿«å®³ã€‚</p>
+<figure id="attachment_11632515" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_05.jpg"><img class="size-large wp-image-11632515" src="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-spain_madrid_05-600x343.jpg" alt="" width="600" b="343" /></a><figcaption class="wp-caption-text">ä¸€æ‰€å­¦æ ¡çš„å¸ˆç”Ÿæ¬£èµäº†ç”»ä½œå¹¶è®¤çœŸè†å¬äº†ä»‹ç»ã€‚ï¼ˆæ˜Žæ…§ç½‘ï¼‰</figcaption></figure>
+<p>æ³•è½®åŠŸäºŽ1992å¹´åœ¨ä¸­å›½å¤§é™†ä¼ å‡ºï¼ŒæŒ‡å¯¼äººä»¬æŒ‰ç…§â€œçœŸã€å–„ã€å¿â€åŽŸåˆ™è¦æ±‚è‡ªå·±ï¼Œæé«˜äººä»¬çš„èº«ä½“ç´ è´¨å’Œç²¾ç¥žå¢ƒç•Œï¼Œè‡³ä»Šæ´ªä¼ åˆ°ä¸–ç•Œä¸€ç™¾å¤šä¸ªå›½å®¶å’Œåœ°åŒºï¼Œæ·±å—å„æ—è£”æ°‘ä¼—çš„æ¬¢è¿Žã€‚</p>
+<p>ç„¶è€Œ1999å¹´7æœˆä»¥ä¸­å…±å‰å…šé­æ±Ÿæ³½æ°‘ä¸ºé¦–çš„é‚ªæ¶é›†å›¢å¯¹æ³•è½®åŠŸå‘åŠ¨äº†ç­ç»äººæ€§çš„è¿«å®³ï¼Œç»™æ³•è½®åŠŸå­¦å‘˜åŠå…¶å®¶å±žå¸¦æ¥æ·±é‡çš„ç¾éš¾ã€‚</p>
+<p>è®¸å¤šäººåœ¨ç•™è¨€ç°¿ä¸­å†™ä¸‹äº†ä»–ä»¬çš„æ„Ÿå—ï¼š</p>
+<p>çŽ›ä¸½äºšï¹’ä½•èµ›ï¼ˆMaria JosÃ©ï¼‰å†™é“ï¼šâ€œæˆ‘å¸Œæœ›å¾ˆå¿«äººä»¬éƒ½èƒ½äº†è§£è¿™åœºè¿«å®³ï¼Œä»¥ä¾¿è¿™æ ·çš„è¿«å®³ä¸å†å‘ç”Ÿã€‚â€</p>
+<p>é˜¿çŽ›ä¸½äºšï¹’èŽŽå…‹è’‚ï¼ˆAmalia Shaktiï¼‰å†™é“ï¼šâ€œæ°å‡ºçš„ç”»å±•æ‰“åŠ¨äººå¿ƒï¼Œä¸ŽçœŸæ­£é‡è¦çš„ä¸»é¢˜è”ç³»åœ¨ä¸€èµ·ï¼Œè¡¨çŽ°äººæ€§å‡åŽåŽçš„å´‡é«˜ã€‚ä¸€æ¬¡ç¾Žå¥½è€Œéœ‡æ’¼çš„ç»åŽ†ã€‚â€</p>
+<p>å¦ä¸€ä½æ·±æœ‰æ„Ÿè§¦çš„è§‚èµè€…åœ¨ç•™è¨€ç°¿ä¸Šå†™é“ï¼šâ€œè¿™æ¬¡å±•è§ˆæ˜¯æƒ…æ„Ÿçš„å‡åŽï¼Œä¼ é€’äº†å’Œå¹³ä¸Žè°å’Œã€‚â€#</p>
+<p>æ–‡å­—æ•´ç†ï¼šæŽæ´æ€ï¼Œè´£ä»»ç¼–è¾‘ï¼šé«˜é™</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/11/4/n11632467.htm">Á½Ç§¶àÈË²Î¹ÛÂíµÂÀï¡°ÕæÉÆÈÌÃÀÕ¹¡±ÉîÊÜ¸Ð¶¯</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/17/n11595293.htm">¡°ÕæÉÆÈÌ¡±ÃÀÕ¹¶àÂ×¶à´óÑ§¿ªÄ»?»­¼ÒÔÞÌ¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/27/n11481772.htm">¡°ÕæÉÆÈÌ¡±ÃÀÕ¹¶àÂ×¶àÊÐÕþÌü¿ªÄ» ¸Ð¶¯ÕþÒª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/25/n11138636.htm">°ÍÎ÷ÒéÔº»­ÀÈ°ìÕæÉÆÈÌÃÀÕ¹ ²ÎÖÚÒéÔ±Ö§³Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/25/n10739878.htm">ÃØÂ³´óÑ§½üÁ½Ç§ÈË¹ÛÕæÉÆÈÌÃÀÕ¹ Ê¦ÉúÉîÊÜ¸Ð¶¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/11/28/n9903162.htm">¼ÓÄÃ´óÊ¦Éú¹ÛÕæÉÆÈÌÃÀÕ¹ Óõ×ÜÀí¹Ø×¢·¨ÂÖ¹¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/14/10/6/n4265169.htm">ÈÕ±¾ÒéÔ±ÑûÇë·¨ÂÖ¹¦¾Ù°ì¡°ÕæÉÆÈÌÃÀÕ¹¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/7/3/15/n1646466.htm">ÕæÉÆÈÌÃÀÕ¹Ì¨ÄÏÉç½Ì¹ÝÕ¹³ö ¹Ý³¤Åå·þ·¨ÂÖ¹¦¾«Éñ</a></li>
-> <li><a href="https://github.com/liczai2340/djy/blob/master/gb/18/9/25/n10739878.md">ÃØÂ³´óÑ§½üÁ½Ç§ÈË¹ÛÕæÉÆÈÌÃÀÕ¹ Ê¦ÉúÉîÊÜ¸Ð¶¯</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631029.htm">´óÂ½Ë®¹û·áÊÕ ¹ûÅ©Âô²»µô ÊÐÃñ³Ô²»Æð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11630905.htm">ÖØÇì¸±Êé¼ÇÈÎÑ§·æÈ¥ÊÀ ´«×ÔÉ±ÉíÍö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11630930.htm">»ªÎªÔ±¹¤ÆØÄÚ²¿Öî¶àºÚÄ»ºÍ¸¯°Ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631155.htm">ËÄÖÐÈ«»áÈý´ó¶¯×÷ µ³°Ë¹É¹«¸æÍ¸Â¶ÖÐ¹²ÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610675.htm">ËïÖÐÉ½ÇÉÃî»Ø´ð ÈÃ´«ËµÖÐµÄ´óÀÐÅõ¸¹´óÐ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610229.htm">³ö¼Ò²»¶ÝÊÀ ¸¨ÖúÃ÷³É×æµÃÌìÏÂµÄ¹ÖÉ®µÀÑÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/29/n11620112.htm">¡¾Èý¹úÓ¢ÐÛ¡¿Ö®Èý£º²Ü²ÙÓÄÄ¬ °®Ð¦°®¿Þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11629334.htm">Íõ½¡ÁÖ¶ù×ÓÍõË¼´ÏÇå¿ÕÎ¢²© ÍøÂç·è´«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11618129.htm">×¨¼Ò½ÒÕæÏà£ºÒ»´øÒ»Â·¿ÖÒý·¢ÖÐ¹ú½ðÈÚÎ£»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628953.htm">Ïã¸Û¸¡Ê¬°¸ Íø´«´óÂ½ÌØ¾¯½ÒÖÐ¹²¾øÃÜÉ±ÈËÄÚÄ»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627605.htm">¡¾ÐÂÎÅ¿´µã¡¿ËÄÖÐ¹«±¨Ìá¾­¼Ã½ö4¾ä ÓÐºÎÄÚÇé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11629293.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀ¹úÖÇ»ÛÆÆ½âÖÐ¹²Ð°Ëµ ±±¾©Ìø½Å</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626043.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ËÄÖÐÈ«»áºóÏã¸ÛÍø½û 23ÌõÖØÏÖ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628658.htm">ElkieÓ­21ËêÉúÈÕ ×Óè¤ÓëÊæ»ªÒ»ÆðÎªËýÇìÉú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631025.htm">ÄâÄêµ×ÒÆÃñÌ¨Íå ÏôÈôÔª£ºÀë¿ªÏã¸ÛÊÇ¼þÍ´¿àÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11629875.htm">ÍòÊ¥Ò¹¶«¾©½ÖÍ·ÅÉ¶Ô ¡°Ð¡ÐÜÎ¬Äá¡±ºÜÇÀ¾µ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11630758.htm">·¶±ù±ù¸ßÔÆÏèºÏÅÄ¾ç»»½ÇÖØÅÄ È·¶¨ÐÂ½ÇÒÑ½ø×é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627888.htm">±»µË³¬±ðÖÂ¶ú»·ÅªãÂ ËïÙ³Ïëµ½¿ê×ÓÊéÇ©¹Îðð°å</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/7/3/15/n1646466.md#1">çœŸå–„å¿ç¾Žå±•å°å—ç¤¾æ•™é¦†å±•å‡º é¦†é•¿ä½©æœæ³•è½®åŠŸç²¾ç¥ž</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/14/10/6/n4265169.md#1">æ—¥æœ¬è®®å‘˜é‚€è¯·æ³•è½®åŠŸä¸¾åŠžâ€œçœŸå–„å¿ç¾Žå±•â€</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/17/11/28/n9903162.md#1">åŠ æ‹¿å¤§å¸ˆç”Ÿè§‚çœŸå–„å¿ç¾Žå±• åæ€»ç†å…³æ³¨æ³•è½®åŠŸ</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/9/25/n10739878.md#1">ç§˜é²å¤§å­¦è¿‘ä¸¤åƒäººè§‚çœŸå–„å¿ç¾Žå±• å¸ˆç”Ÿæ·±å—æ„ŸåŠ¨</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/19/11/4/n11632467.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134371.md#1" target="_blank">ä¸­å…±åå¯¹æå€¡â€œç¤¼ä¹‰å»‰è€»â€çš„æ–°ç”Ÿæ´»è¿åŠ¨</a></li><li><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">ä¸­å…±çš„ä¼ªç«éª—å±€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">å°åŒ—ä¿®ç‚¼å¿ƒå¾—äº¤æµä¼š æ³•è½®åŠŸå­¦å‘˜è°ˆèº«å¿ƒæ”¹å˜</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550540.md#1">å› é¢„è¨€ä¸­å…±ç—…æ¯’çˆ†çº¢ å°åº¦ç”·å­©é¢„ç¤ºæ¥å¹´å¤©è±¡</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/13/n12546586.md#1">ç´«å¾®æ–—æ•°æŽ¨ç®—  å°è°ˆæ‹œç™»çœŸèƒ½ç™»å¤§ä½å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12553064.md#1">è‹±ç”·å£°ç§°è¢«å¤–æ˜Ÿäººç»‘æž¶ åœ¨å¤ªç©ºèˆ¹ä¸Šé‡åˆ°æ­Œæ˜Ÿ</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/11/n12541883.md#1">çªå‡ºéƒ¨ä¹‹å½¹ å·´é¡¿å°†å†›çš„ç¥žè¿¹ä¹‹æˆ˜</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556457.md#1">ä»Žã€Šç‹®å­çŽ‹ã€‹ç»å…¸å°è¯ çœ‹å¤©é€‰ä¹‹çŽ‹çš„æˆé•¿</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562002.md#1">ã€é‡æ’­ã€‘ç™½å®«å‘å¸ƒä¼šï¼šç–«æƒ…é«˜å³° å¦‚ä½•é˜²å¤‡</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562870.md#1">ã€å¤§é™†æ–°é—»è§£æ¯’ã€‘æ—¶äº‹å°å“ï¼šå¤šçŒ«è…»è·¨å›½æžæ”¿å˜</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561391.md#1">ã€é‡æ’­ã€‘å·æ™®å›¢é˜Ÿï¼šåŽ»é™¤èˆžå¼Šé€‰ç¥¨ è¶³ä»¥ç¿»è½¬ç»“æžœ</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12558221.md#1">ã€å¤§é€‰æ›´æ–°11.18ã€‘æž—ä¼å¾·ï¼šå·æ™®å°†å‡»è´¥æ‰€æœ‰å¯¹æ‰‹</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557575.md#1">è®¡ç®—â€œé‚®å¯„é€‰ç¥¨â€åŽåè¶… ç›‘å¯Ÿå‘˜ï¼šåº”åœç‚¹é‚®å¯„é€‰ç¥¨</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559329.md#1">å¯†æ­‡æ ¹éŸ¦æ©åŽ¿è®¤è¯é€‰ä¸¾ç»“æžœåè½¬å†…å¹•æ›å…‰</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559155.md#1">å­™ä¿ªæ™’å…­å²å¥³å„¿æ¯›ç¬”å­— å°èŠ±ç‰ˆåƒå­—æ–‡å­—ä½“å·¥æ•´</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556732.md#1">æž—é’éœžç”Ÿæ—¥å‡ºæ–°ä¹¦ å¸–æ–‡è¯å®žä¸Žå¯Œå•†ä¸ˆå¤«æƒ…æœªå˜</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560394.md#1">å§œç´ æ‹‰æ€€å­•èŽ·å…¬å¸è¯å®ž å­©å­é¢„è®¡æ˜Žå¹´4æœˆå‡ºç”Ÿ</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12557059.md#1">åœŸå›½è¡¨å¦¹ç¡®è¯ŠæŸ“ç–« å´å‡¤å¹ç—…æ¯’æŠŠå¤šå›½å˜æˆåœ°ç‹±</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561769.md#1">èµµæ ‘æµ·è°ˆåŠå®¶åº­ç”Ÿæ´» èµžé«˜åœ†åœ†æ˜¯æ ‡å‡†å„¿åª³</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557834.md#1">ã€ç¾Žé£Ÿå¤©å ‚ã€‘4ç§æ–¹æ³•é•¿ä¹…ä¿å­˜å§œï½žå‡ ä¸ªæœˆéƒ½æ–°é²œï¼</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557479.md#1">å…¨çƒæœ€åŽä¸€åªç™½è‰²é•¿é¢ˆé¹¿ åŠ è£…GPSè¿½è¸ªå™¨</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557985.md#1">45äº¿å¹´åŽ†å²é™¨çŸ³ç ¸ç ´å±‹é¡¶ å°å°¼ç”·å­å˜å¤§å¯Œç¿</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550494.md#1">å†·è—è‚‰ä¸Žå†·å†»è‚‰ä¸ä¸€æ · è´­ä¹°æ—¶è¦çå¤§çœ¼ç›</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556081.md#1">å‡¡å£«æž—ä¸åªä¿æ¹¿ æœ‰5å¤§å¦™ç”¨ æŒ‘é€‰çœ‹1ç‚¹</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/11/4/n11632467.htm">ä¸¤åƒå¤šäººå‚è§‚é©¬å¾·é‡Œâ€œçœŸå–„å¿ç¾Žå±•â€æ·±å—æ„ŸåŠ¨</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mytgei3586/djy/blob/master/gb/19/11/4/n11632467.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
